# AgentFrame

./: .env  .gitignore  README.md  main.py  pyproject.toml
examples/: PlanandSolve.py  reflection.py  research.py
src/agent/: __init__.py  base_agent.py  react_agent.py  researchAssistantAgent.py
src/agents/: base_agent.py
src/aier/agent/: __init__.py  agent.py  base_agent.py
src/aier/model/: __init__.py  base_model.py  openai_chat_model.py
src/aier/tool/: tool_registry.py
src/aier/utils/: __init__.py  printer.py
src/memory/: short_term.py
src/model/: __init__.py  base_model.py
src/models/: __init__.py  base_model.py  chat_model.py
src/tool/: __init__.py  tool_registry.py
src/util/: __init__.py  logger.py
